[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/gameBoard.gd" type="Script" id=1]

[sub_resource type="StyleBoxTexture" id=1]

[node name="Node2D" type="Node2D"]

[node name="SnakeBoard" type="Node2D" parent="."]
position = Vector2( 80, 80 )
script = ExtResource( 1 )
player2_color = Color( 1, 0.584314, 0.129412, 1 )

[node name="game_timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="P1LengthText" type="Label" parent="HUD"]
margin_left = 10.0
margin_top = 15.0
margin_right = 50.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_vertical = 0

[node name="TimeCounter" type="Label" parent="HUD"]
margin_left = 240.0
margin_top = 15.0
margin_right = 280.0
margin_bottom = 29.0
mouse_filter = 1
size_flags_vertical = 0

[node name="P2LengthText" type="Label" parent="HUD"]
margin_left = 440.0
margin_top = 15.0
margin_right = 480.0
margin_bottom = 29.0
mouse_filter = 1
size_flags_vertical = 0

[node name="ResultMenu" type="PopupMenu" parent="HUD"]
margin_left = -3.0
margin_top = -6.0
margin_right = 597.0
margin_bottom = 594.0
custom_colors/font_color_accel = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_styles/panel = SubResource( 1 )

[node name="WinnerText" type="Label" parent="HUD/ResultMenu"]
margin_left = 220.0
margin_top = 250.0
margin_right = 280.0
margin_bottom = 264.0
mouse_filter = 1
size_flags_vertical = 0

[node name="ReplayButton" type="Button" parent="HUD/ResultMenu"]
pause_mode = 2
margin_left = 220.0
margin_top = 293.0
margin_right = 340.0
margin_bottom = 323.0
text = "Play Again"

[node name="QuitButton" type="Button" parent="HUD/ResultMenu"]
pause_mode = 2
margin_left = 220.0
margin_top = 333.0
margin_right = 340.0
margin_bottom = 363.0
text = "Return to Title"

[connection signal="pressed" from="HUD/ResultMenu/ReplayButton" to="SnakeBoard" method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="HUD/ResultMenu/QuitButton" to="SnakeBoard" method="_on_QuitButton_pressed"]
